new login creation and API proxy for development

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+ 
+
+
 
 # testing
 /coverage
@@ -32,6 +35,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.cursor 
 
 # vercel
 .vercel
