--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
+    "recharts": "2.15.4",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
   },
