--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.69.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "2.15.4",
+    "styled-jsx": "^5.1.7",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.2.1"
   },
